# esp32hacks

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  base.cmake
3ddemo/: CMakeLists.txt
3ddemo/main/: CMakeLists.txt  main.cpp  mesh.inc
bitmaps/: CMakeLists.txt
bitmaps/main/: bitmaps.inc  main.cpp
bitmaps/res/: build.bat
boing_ball/: CMakeLists.txt
boing_ball/main/: CMakeLists.txt  bitmaps.cpp  bitmaps.inc  build.bat  main.cpp
hello/: CMakeLists.txt  sdkconfig
hello/main/: main.cpp
hello_graphics/: CMakeLists.txt
hello_graphics/main/: CMakeLists.txt  main.cpp
libs/app/: CMakeLists.txt
libs/app/include/app/: application.h  bits.h  oscilloscope.h
libs/app/src/: application.cpp  oscilloscope.cpp
libs/application/: CMakeLists.txt
libs/application/include/application/: application.h  bits.h
libs/application/src/: application.cpp  data.inc
libs/graphics/: CMakeLists.txt
libs/graphics/include/graphics/: base.h  bitmap.h  bitmaps.h  bits.h  device.h  display.h  fonts.h  graphics.h  oscilloscope.h
libs/graphics/src/: base.cpp  bitmap.cpp  device.cpp  display.cpp  font_game_12pt.inc  font_glcd_5x7.inc  font_tahoma_8pt.inc  font_ubuntu_6pt.inc  fonts.cpp  oscilloscope.cpp
libs/graphics3d/: CMakeLists.txt
libs/graphics3d/include/graphics3d/: base.h  graphics3d.h  renderer.h
libs/graphics3d/src/: base.cpp  renderer.cpp
libs/oled/: CMakeLists.txt
libs/oled/include/oled/: base.h  i2c.h  oled.h  ssd1306.h
libs/oled/src/: font_tahoma_8pt.cpp  fonts.cpp  i2c.cpp  ssd1306.cpp
libs/sim/include/mockup/: esp_intr_alloc.h  esp_log.h  esp_system.h
libs/sim/include/mockup/driver/: adc.h  gpio.h  i2c.h
libs/sim/include/mockup/freertos/: FreeRTOS.h  task.h
libs/sim/include/sim/: sim.h  ssd1306.h
libs/sim/src/: adc.cpp  freertos.cpp  i2c.cpp  log.cpp  main.cpp  sim.cpp  ssd1306.cpp  sys.cpp
libs/sys/: CMakeLists.txt
libs/sys/include/sys/: i2c.h
libs/sys/src/: i2c.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: utils.h
libs/utils/src/: utils.cpp
main/: CMakeLists.txt  main.cpp
main/include/: adk
main/lib/app/: CMakeLists.txt
main/lib/app/include/app/: application.h  bits.h
main/lib/app/src/: application.cpp
main/lib/oled/: CMakeLists.txt
main/lib/oled/include/oled/: fonts.h  ssd1306.h
main/lib/oled/src/: font_glcd_5x7.cpp
oscilloscope/: CMakeLists.txt
oscilloscope/main/: CMakeLists.txt  main.cpp
retro_demo/: CMakeLists.txt
retro_demo/main/: CMakeLists.txt  bitmaps.inc  main.cpp
retro_demo/res/: build.bat
scrolling/: CMakeLists.txt
scrolling/main/: main.cpp
tools/: bitmap2cpp.py  blender_export.py  render_boing.py  render_test.py
